--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
      <p>Construir músculo es una 'ciencia' compleja y depende de muchos factores como la nutrición o el descanso, además del entrenamiento.</p> 
      <hr>
      <h3>entrenamiento</h3>
+     <div>
+         <nav>
+             <ul>
+                 <li>home</li>
+                 <li>mi portafolio</li>
+                 <li>mi aprendizaje
+                    <ul>
+                        <li><a href="fuenten.html">fuente n</a></li>
+                        <li><a href="fuented.html">fuente d</a></li>
+                    </ul>
+                 </li>
+             </ul>
+         </nav>
+     </div>
 
 </body>
 </html>
