--- a/fuenten.html
+++ b/fuenten.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <link rel="stylesheet" href="css/fuenten.css">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
+    <h1>netflix</h1>
     <div>
 
     </div>
