actulizacion de repositorio

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <p>Es una actividad física que se basa en levantar pesas 
         y realizar diversos ejercicios <span style="color:blue">anaeróbicos</span>.</p>
     <p> el objetivo es <a target="_blank" href="https://www.hola.com/estar-bien/galeria/20210415187861/perder-grasa-corporal-por-que-cuesta-tanto/3/">quemar grasas</a> y marcar los músculos.</p>
+    <img class= "imagen" src ="imagenes\1.jpg"  width="400"/>
+
     <hr>
     <h2><span style="color :crimson">consejos para esta disiplina deportiva</span> </h2>
     <p>Una buena alimentación es el pilar fundamental para ganar músculo en tus entrenamientos fitness
@@ -21,8 +23,7 @@
         <p>- Cómo prepararse para una competición de Culturismo Natural (de amateur a profesional)</p>
      <p>Construir músculo es una 'ciencia' compleja y depende de muchos factores como la nutrición o el descanso, además del entrenamiento.</p> 
      <hr>
-     <h3>entrenamiento</h3>
-     <div>
+     <div class="perfil">
          <nav>
              <ul>
                  <li>home</li>
