--- a/fuenten.html
+++ b/fuenten.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>netflix</h1>
+    <h1>Netflix</h1>
     <div>
 
     </div>
