--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <ul>
                         <li><a href="fuenten.html">fuente n</a></li>
                         <li><a href="fuented.html">fuente d</a></li>
+                        <li><a href="fuenteg.html">fuente g</a></li>
                     </ul>
                  </li>
              </ul>
