--- a/fuenteg.html
+++ b/fuenteg.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Game of thrones </h1>
+    <h1> Game of Thrones </h1>
     
 </body>
 </html>
