--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                  <li>mi portafolio</li>
                  <li>mi aprendizaje
                     <ul>
-                        <li><a href="fuenten.html">fuente n</a></li>
-                        <li><a href="fuented.html">fuente d</a></li>
-                        <li><a href="fuenteg.html">fuente g</a></li>
+                        <li><a href="fuenten.html">Netflix</a></li>
+                        <li><a href="fuented.html">Disney</a></li>
+                        <li><a href="fuenteg.html">Game of Thrones</a></li>
                     </ul>
                  </li>
              </ul>
