--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                         <li><a href="fuenten.html">Netflix</a></li>
                         <li><a href="fuented.html">Disney</a></li>
                         <li><a href="fuenteg.html">Game of Thrones</a></li>
+                        <li><a href="fuenteds.html">reloj digital </a></li>
                     </ul>
                  </li>
              </ul>
