--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                         <li><a href="fuented.html">Disney</a></li>
                         <li><a href="fuenteg.html">Game of Thrones</a></li>
                         <li><a href="fuenteds.html">reloj digital </a></li>
+                        <li><a href="color.html">formato de colores</a></li>
                     </ul>
                  </li>
              </ul>
