--- a/index.html
+++ b/index.html
@@ -28,11 +28,21 @@
                  <li>mi portafolio</li>
                  <li>mi aprendizaje
                     <ul>
-                        <li><a href="fuenten.html">Netflix</a></li>
-                        <li><a href="fuented.html">Disney</a></li>
-                        <li><a href="fuenteg.html">Game of Thrones</a></li>
-                        <li><a href="fuenteds.html">reloj digital </a></li>
-                        <li><a href="colores.html">formato de colores</a></li>
+                        <li> formatos
+                            <ul>
+                                <li><a href="fuenten.html">Netflix</a></li>
+                                <li><a href="fuented.html">Disney</a></li>
+                                <li><a href="fuenteg.html">Game of Thrones</a></li>
+                                <li><a href="fuenteds.html">Horas </a></li>
+                               
+                            </ul>
+                        </li>
+                        <li>colores
+                            <ul>
+                                <li><a href="colores.html">Colores</a></li>
+                            </ul>
+
+                        </li>
                     </ul>
                  </li>
              </ul>
