--- a/alineacion.html
+++ b/alineacion.html
@@ -8,9 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    <p class="textOne">Lorem ipsum dolor sit.</p>
-    <p class="textTwo">Lorem, ipsum.</p>
-    <p class="textThree">Lorem, ipsum dolor.</p>
-    <p class="textFour">Lorem ipsum dolor sit amet.</p>
+    <div class="box Blockquote1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, soluta.</div>
+    <div class="box Blockquote2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, officiis.</div>
+    <div class="box Blockquote3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum, quam!</div>
+    <div class="box Blockquote4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, doloribus.</div>
+    <div class="box Blockquote5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, quam.</div>
 </body>
 </html>
