--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
 
     <hr>
     <h2><span style="color :crimson">consejos para esta disiplina deportiva</span> </h2>
-    <p>Una buena alimentación es el pilar fundamental para ganar músculo en tus entrenamientos fitness
-        <p>- Come 6 veces al día, muchísima proteína y nunca antes de acostarte, son algunos de los consejos de un culturista</p>
-        <p>- Los 15 mandamientos definitivos para ganar músculo de una vez por todas</p>
-     <p>Construir músculo es una 'ciencia' compleja y depende de muchos factores como la nutrición o el descanso, además del entrenamiento.</p> 
+    <div class="text1">Una buena alimentación es el pilar fundamental para ganar músculo en tus entrenamientos fitness</div>
+    <div class="text2">Come 6 veces al día, muchísima proteína y nunca antes de acostarte, son algunos de los consejos de un culturista</div>
+     <div class="text3">Construir músculo es una 'ciencia' compleja y depende de muchos factores como la nutrición o el descanso, además del entrenamiento.</div> 
      <hr>
      <div class="perfil">
          <nav>
@@ -42,6 +41,12 @@
                                 <li><a href="colores.html">Colores</a></li>
                             </ul>
 
+                        </li>
+                        <li>margins,borders and padding
+                            <ul>
+                                <li><a href="alineacion.html">margins,border and padding</a></li>
+
+                            </ul>
                         </li>
                     </ul>
                  </li>
