--- a/alineacion.html
+++ b/alineacion.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="box Blockquote1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, soluta.</div>
-    <div class="box Blockquote2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, officiis.</div>
+    <div class="box Blockquote2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, omnis.</div>
     <div class="box Blockquote3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum, quam!</div>
-    <div class="box Blockquote4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, doloribus.</div>
+    <div class="box Blockquote4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quas!</div>
     <div class="box Blockquote5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, quam.</div>
 </body>
 </html>
