--- a/index.html
+++ b/index.html
@@ -42,10 +42,20 @@
                             </ul>
 
                         </li>
+                        <li> span
+                            <ul>
+                                <li><a href="span.html">span</a></li>
+                            </ul>
+                        </li>
                         <li>margins,borders and padding
                             <ul>
                                 <li><a href="alineacion.html">margins,border and padding</a></li>
 
+                            </ul>
+                        </li>
+                        <li>Imagenes
+                            <ul>
+                                <li><a href="imagenes.html">Imagenes</a></li>
                             </ul>
                         </li>
                     </ul>
