--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Es una actividad física que se basa en levantar pesas 
         y realizar diversos ejercicios <span style="color:blue">anaeróbicos</span>.</p>
     <p> el objetivo es <a target="_blank" href="https://www.hola.com/estar-bien/galeria/20210415187861/perder-grasa-corporal-por-que-cuesta-tanto/3/">quemar grasas</a> y marcar los músculos.</p>
-    <img class= "imagen" src ="imagenes\1.jpg"  width="400"/>
+    <img class= "imagen" src ="./img/1.jpg"  width="400"/>
 
     <hr>
     <h2><span style="color :crimson">consejos para esta disiplina deportiva</span> </h2>
