--- a/imagenes2.html
+++ b/imagenes2.html
@@ -34,14 +34,14 @@
         </div>
     </div>
     <div class="proteinas">
-        <div class=box>
+        <div class="box">
             <h2>proteina de los alimentos</h2>
-            <img class="png imagen-100" src="./img/8.jpg" alt="comida" title="proteina del alimento">
+            <img class="imagen-100" src="./img/8.jpg" alt="comida" title="proteina del alimento">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, saepe?</p>
         </div>
-        <div class="box" >
+        <div class="box">
             <h2>suplementos</h2>
-            <img class=" png imagen-100" src="./img/9.png" alt="suplementos">
+            <img class="imagen-100" src="./img/9.png" alt="suplementos">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione, pariatur?</p>
         </div>
 
