--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
                         <li>Imagenes
                             <ul>
                                 <li><a href="imagenes.html">Imagenes</a></li>
+                                <li><a href="imagenes2.html">iamgenes 2</a></li>
+                            </ul>
+                        </li>
+                        <li> menu
+                            <ul>
+                                <li><a href="menu1.html">menu 1</a> </li>
                             </ul>
                         </li>
                     </ul>
