--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
                                 <li><a href="menu1.html">menu 1</a> </li>
                             </ul>
                         </li>
+                        <li>shadow
+                            <ul>
+                                <li><a href="./shadow.html">contenedores-sombras</a></li>
+                            </ul>
+                        </li>
                     </ul>
                  </li>
              </ul>
