--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
                                 <li><a href="./shadow.html">contenedores-sombras</a></li>
                             </ul>
                         </li>
+                        <li> tabla
+                            <ul>
+                                <li><a href="./tabla.html">tablas</a></li>
+                            </ul>
+                        </li>
                     </ul>
                  </li>
              </ul>
