--- a/tablas_2.html
+++ b/tablas_2.html
@@ -12,7 +12,7 @@
     <div class="style-table">
         <table>
             <thead >
-                <th colspan="5">Cátalogo de precios</th>
+                <th class="borde1" colspan="5">Cátalogo de precios</th>
             </thead>
             <thead>
                 <th>imagen</th>
@@ -24,18 +24,18 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><img src="./img/PREVIEW-5.jpg" alt="best protein"></td>
+                    <td ><img src="./img/PREVIEW-5.jpg" alt="best protein"></td>
                     <td>BEST PROTEIN</td>
                     <td>5 Lb</td>
                     <td>$415,000</td>
-                    <td rowspan="2"> proscience</td>
+                    <td class="borde3" rowspan="2"> proscience</td>
                     
                 </tr>
                 <tr>
-                    <td><img src="./img/PREVIEW.jpg" alt="legacy"></td>
+                    <td class="borde2"><img src="./img/PREVIEW.jpg" alt="legacy"></td>
                     <td>LEGACY</td>
                     <td>330 g</td>
-                    <td>$99,000</td>
+                    <td >$99,000</td>
                     
                 </tr>
             </tbody>
