--- a/formulario.html
+++ b/formulario.html
@@ -8,35 +8,35 @@
     <link rel="stylesheet" href="./css/formulario.css">
 </head>
 <body>
-    <h1>citas medicas</h1>
+    <h1 >CITAS MEDICAS</h1>
     <form>
         <fieldset>
-            <legend>ingrese la informacion solicitada</legend>
-        <label >ingrese su tipo de documento</label>
+            <legend>Ingrese la informacion solicitada </legend>
+        <label >Ingrese su tipo de documento</label>
         <select >
-            <option>registro civil</option>
-            <option>targeta de identidad</option>
-            <option>cedula de ciudadania</option>
-            <option>cedula extranjera</option>
+            <option>Registro civil</option>
+            <option>Targeta de identidad</option>
+            <option>Cedula de ciudadania</option>
+            <option>Cedula extranjera</option>
         </select> 
         
-        <label>ingrese su numero de documento</label>
-        <input type="text" placeholder="ingrese el numero de documento" >
-        <label>ingrese su nombre </label>
-        <input type="text" placeholder="ingrese su nombre">
-        <label>ingrese su apellido</label>
-        <input type="text" placeholder="ingrese su apellido" >
-        <label>ingrese su genero</label>
-        <input type="radio" name="genero" > masculino <br>
-        <input type="radio" name="genero" > femenino <br>
-        <input type="radio" name="genero" > no determinado <br>
-        <label for="">seleccione el dia de la cita</label>
-        <input type="checkbox" name="dia cita" id="">lunes<br>
-        <input type="checkbox" name="dia cita" id="">martes<br>
-        <input type="checkbox" name="dia cita" id="">miercoles<br>
-        <input type="checkbox" name="dia cita" id="">jueves<br>
-        <input type="checkbox" name="dia cita" id="">viernes<br>
-        <label for="">dudas e inquietudes</label>
+        <label>Ingrese su numero de documento</label>
+        <input type="text" placeholder="Ingrese el numero de documento" >
+        <label>Ingrese su nombre </label>
+        <input type="text" placeholder="Ingrese su nombre">
+        <label>Ingrese su apellido</label>
+        <input type="text" placeholder="Ingrese su apellido" >
+        <label>Ingrese su genero</label>
+        <input type="radio" name="genero" > Masculino <br>
+        <input type="radio" name="genero" > Femenino <br>
+        <input type="radio" name="genero" > No determinado <br>
+        <label for="">Seleccione el dia de la cita</label>
+        <input type="checkbox" name="dia cita" id="">Lunes<br>
+        <input type="checkbox" name="dia cita" id="">Martes<br>
+        <input type="checkbox" name="dia cita" id="">Miercoles<br>
+        <input type="checkbox" name="dia cita" id="">Jueves<br>
+        <input type="checkbox" name="dia cita" id="">Viernes<br>
+        <label for="">Dudas e inquietudes</label>
         <textarea name="" id="" cols="30" rows="10"></textarea>
         <br>
         <input type="submit" value="enviar">
