--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <hr>
     <div class="perfil">
         <nav>
-            <ul>
+            <ul class="nav">
                 <li class="row1">Home &nbsp &nbsp </li>
                 <li class="row2">mi portafolio &nbsp &nbsp</li>
                 <li class="row3">mi aprendizaje 
@@ -64,6 +64,12 @@
                                <li><a class="menu" href="./tabla.html">tablas</a></li>
                                <li><a class="menu" href="./tablas_2.html">combinacion de celdas</a></li>
                            </ul>
+                       </li>
+                       <li class="menu1">formularios
+                        <ul >
+                            <li><a class="menu" href="./formulario.html">formulario</a></li>
+                            <li><a class="menu" href="./login.html">login</a></li>
+                        </ul>
                        </li>
                    </ul>
                 </li>
