--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                        <li class="menu1" > menu
                            <ul>
                                <li><a class="menu"  href="menu1.html">menu 1</a> </li>
+                               <li><a class="menu" href="./menu_iconos.html">menu iconnos</a></li>
                            </ul>
                        </li>
                        <li class="menu1">shadow
