--- a/menu_iconos.html
+++ b/menu_iconos.html
@@ -5,9 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>menu iconos</title>
+    <link rel="stylesheet" href="./icons/all.css">
     <link rel="stylesheet" href="./css/menu_iconos.css">
 </head>
 <body>
     
+    <nav>
+        <ul>
+            <i class="fa-solid fa-bars"></i>
+        </ul>
+        <ul>
+            <li><i class="icons_style fa-regular fa-circle-user"></i>Inicio sesion</li>
+            <hr>
+            <li><i class="icons_style fa-solid fa-jet-fighter"></i>>vuelos</li>
+            <li><i class="icons_style fa-solid fa-bed"></i>alojamiento</li>
+            <li><i class="icons_style fa-solid fa-car-rear"></i>carros</li>
+            <li><i class="icons_style fa-solid fa-umbrella-beach"></i>paquetes</li>
+            <hr>
+            <li><i class="fa-solid fa-globe"></i>explore</li>
+            <li><i class="icons_style fa-brands fa-kickstarter"></i>blog</li>
+            <li><i class="icons_style fa-brands fa-kickstarter"></i>rutas</li>
+            <li><i class="icons_style fa-brands fa-kickstarter"></i>vielos directos</li>
+            <li><i class="icons_style fa-solid fa-shield-halved"></i>restricciones de viaje</li>
+            <hr>
+            <li><i class="icons_style fa-solid fa-book"></i>trips</li>
+        </ul>
+    </nav>
 </body>
 </html>
