--- a/menu_iconos.html
+++ b/menu_iconos.html
@@ -9,27 +9,34 @@
     <link rel="stylesheet" href="./css/menu_iconos.css">
 </head>
 <body>
-    
-    <nav>
-        <ul>
-            <i class="fa-solid fa-bars"></i>
-        </ul>
-        <ul>
-            <li><i class="icons_style fa-regular fa-circle-user"></i>Inicio sesion</li>
-            <hr>
-            <li><i class="icons_style fa-solid fa-jet-fighter"></i>>vuelos</li>
-            <li><i class="icons_style fa-solid fa-bed"></i>alojamiento</li>
-            <li><i class="icons_style fa-solid fa-car-rear"></i>carros</li>
-            <li><i class="icons_style fa-solid fa-umbrella-beach"></i>paquetes</li>
-            <hr>
-            <li><i class="fa-solid fa-globe"></i>explore</li>
-            <li><i class="icons_style fa-brands fa-kickstarter"></i>blog</li>
-            <li><i class="icons_style fa-brands fa-kickstarter"></i>rutas</li>
-            <li><i class="icons_style fa-brands fa-kickstarter"></i>vielos directos</li>
-            <li><i class="icons_style fa-solid fa-shield-halved"></i>restricciones de viaje</li>
-            <hr>
-            <li><i class="icons_style fa-solid fa-book"></i>trips</li>
-        </ul>
-    </nav>
+   <div class="btn-menu">
+    <label for="btn-menu"class="fa-solid fa-bars"></label>
+   </div> 
+   <input type="checkbox" id="btn-menu">
+   <div class="containar-menu">
+        <div class="cont-menu">
+            <nav>
+                <ul>
+                    <i class="iconos fa-solid fa-bars"></i>
+                    <li><i class="oneicons_style fa-regular fa-circle-user"></i> Inicio sesion</li>
+                    <hr>
+                    <li><i class="icons_style fa-solid fa-jet-fighter"></i> vuelos</li>
+                    <li><i class="icons_style fa-solid fa-bed"></i> alojamiento</li>
+                    <li><i class="icons_style fa-solid fa-car-rear"></i> carros</li>
+                    <li><i class="icons_style fa-solid fa-umbrella-beach"></i> paquetes</li>
+                    <hr>
+                    <li><i class="icons_style fa-solid fa-globe"></i> explore</li>
+                    <li><i class="icons_style fa-brands fa-kickstarter"></i> blog</li>
+                    <li><i class="icons_style fa-brands fa-kickstarter"></i> rutas</li>
+                    <li><i class="icons_style fa-brands fa-kickstarter"></i> vielos directos</li>
+                    <li><i class="icons_style fa-solid fa-shield-halved"></i> restricciones de viaje</li>
+                    <hr>
+                    <li><i class="icons_style fa-solid fa-book"></i> trips</li>
+                </ul>
+            </nav>
+            <!-- <label for="btn-menu"><i class="fa-regular fa-circle-xmark"></i></label>-->
+        </div> 
+   </div>
+   
 </body>
 </html>
