--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="perfil">
         <nav>
             <ul class="nav">
-                <li class="row1">Home &nbsp &nbsp </li>
-                <li class="row2">mi portafolio &nbsp &nbsp</li>
-                <li class="row3">mi aprendizaje 
+                <li class="row1"><i class="icons_style fa-solid fa-house-chimney"></i>Home &nbsp &nbsp </li>
+                <li class="row2"><i class="icons_style fa-solid fa-briefcase"></i>Mi portafolio &nbsp &nbsp</li>
+                <li class="row3"><i class="icons_style fa-solid fa-graduation-cap"></i>Mi aprendizaje 
                    <ul class="menu2">
                        <li class="menu1"> formatos
                            <ul>
