--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
                             <li><a class="menu" href="./login.html">login</a></li>
                         </ul>
                        </li>
+                       <li class="menu1">posicionamientos
+                        <ul>
+                            <li><a class="menu" href="./posicionamiento.html">posicionamientos</a></li>
+                        </ul>
+                       </li>
                    </ul>
                 </li>
             </ul>
