--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                            <ul>
                                <li><a class="menu"  href="menu1.html">menu 1</a> </li>
                                <li><a class="menu" href="./menu_iconos.html">menu iconnos</a></li>
+                               <li><a class="menu" href="./menu_sena.html">menu SENA</a></li>
                            </ul>
                        </li>
                        <li class="menu1">shadow
