--- a/menu_sena.html
+++ b/menu_sena.html
@@ -13,10 +13,10 @@
             <ul class="menu">
                 <li class="menu1"><a href="./">Inicio</a></li>
                 <li class="menu1"><a href="./">Transparencia</a></li>
-                <li class="menu1"><a href="./">Atencion y servicio a la ciudadania</a></li>
+                <li class="menu1"><a href="./">Atención y servicio a la ciudadanía</a></li>
                 <li class="menu1"><a href="./">Participa</a></li>
                 <li class="menu1"><a href="./">La Entidad</a></li>
-                <li class="menu1"><a href="./">Formacion</a></li>
+                <li class="menu1"><a href="./">Formación</a></li>
                 <li class="menu1"><a href="./">Empleabilidad</a></li>
                 <li class="menu1"><a href="./">Empresarios</a></li>
                 <li class="menu1"><a href="./">Sala de Prensa</a></li>
@@ -28,10 +28,10 @@
         <div class="body">
             <nav>
                 <ul class="menu_body">
-                    <li class="menu1_body"> Quiene somos</li>
+                    <li class="menu1_body"> Quienes somos</li>
                     <li class="menu1_body">Funciones y Deberes</li>
                     <li class="menu1_body">Misión y Visión</li>
-                    <li class="menu1_body">Valores y Compromisis institucionales</li>
+                    <li class="menu1_body">Valores y Compromisos institucionales</li>
                     <li class="menu1_body">Estructura Organizacional</li>
                     <li class="menu1_body">Perfiles de los Funcionarios Directivos</li>
                     <li class="menu1_body">Prospectiva</li>
@@ -39,10 +39,10 @@
                     <li class="menu1_body">Manual de Funciones</li>
                     <li class="menu1_body">Directorio SENA</li>
                     <li class="menu1_body">Regionales</li>
-                    <li class="menu1_body"><select name="seleccion" id="seleccion"></select> Internacionalizacion</li>
-                    <li class="menu1_body">Planeacion Estrategica</li>
-                    <li class="menu1_body"><select name="seleccion" id="seleccion"></select> Sistemas Integrados de Gestion</li>
-                    <li class="menu1_body"><select name="seleccion" id="seleccion"></select> Tranformacion Digital</li>
+                    <li class="menu1_body"><select name="seleccion" id="seleccion"></select> Internacionalización</li>
+                    <li class="menu1_body">Planeación Estratégica</li>
+                    <li class="menu1_body"><select name="seleccion" id="seleccion"></select> Sistemas Integrados de Gestión</li>
+                    <li class="menu1_body"><select name="seleccion" id="seleccion"></select> Transformación Digital</li>
                 </ul>
             </nav>
         </div>
