--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                                <li><a class="menu"  href="menu1.html">menu 1</a> </li>
                                <li><a class="menu" href="./menu_iconos.html">menu iconnos</a></li>
                                <li><a class="menu" href="./menu_sena.html">menu SENA</a></li>
+                               <li><a href="./menu-subitems.html" class="menu">sub items</a></li>
+                               <li><a class="menu" href="./menu_desplegable.html">Menu Desplegable</a></li>
                            </ul>
                        </li>
                        <li class="menu1">shadow
