--- a/menu-subitems.html
+++ b/menu-subitems.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/menu-subitems.css">
     <title>Document</title>
 </head>
 <body>
-    <boton class="boton-menu">Enviar</boton>
-</body>
+    <div class="menu">
+        <nav>
+            <ul>
+                <li >Inicio</li>
+                <li id="nosotros" >Nosotros</li>
+                <li >Contactenos</li>
+                <li >Galeria</li>
+            </ul>
+        </nav>
+    </div>   
+</body>  
     <script src="./js/menu-subitens.js"> </script>
 </html>
