--- a/menu_desplegable.html
+++ b/menu_desplegable.html
@@ -19,7 +19,7 @@
                         <li><a href="#">Caquetá</a></li>
                         <li><a href="#">Putumayo</a></li>
                         <li><a href="#">Tolima</a></li>
-                        <li><a href="#">Huila</a>
+                        <li><a href="#">Huila<i class="icon_style fa-solid fa-chevron-right"></i></a>
                             <!--Menu tercer nivel-->
                             <ul>
                                 <li><a href="#">Neiva   </a></li>
