--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
                        <li class="menu1" > menu
                            <ul>
                                <li><a class="menu"  href="menu1.html">menu 1</a> </li>
-                               <li><a class="menu" href="./menu_iconos.html">menu iconnos</a></li>
-                               <li><a class="menu" href="./menu_sena.html">menu SENA</a></li>
-                               <li><a href="./menu-subitems.html" class="menu">sub items</a></li>
-                               <li><a class="menu" href="./menu_desplegable.html">Menu Desplegable</a></li>
+                               <li><a class="menu" href="./menu_iconos.html">Menú iconnos</a></li>
+                               <li><a class="menu" href="./menu_sena.html"> Menú SENA</a></li>
+                               <li><a href="./menu-subitems.html" class="menu">Sub Items</a></li>
+                               <li><a class="menu" href="./menu_desplegable.html">Menú Desplegable</a></li>
+                               <li><a class="menu" href="./media-query.html">Menú Hamburguesa</a></li>
                            </ul>
                        </li>
                        <li class="menu1">shadow
