--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./icons/all.css">
     <title>Acrividad fisica</title>
 </head>
 <body>
@@ -12,12 +13,13 @@
     <hr>
     <div class="perfil">
         <nav>
+            <label id="bar-menu" class="bar-menu">&#9776 </label>
             <ul class="nav">
                 <li class="row1"><i class="icons_style fa-solid fa-house-chimney"></i>Home &nbsp &nbsp </li>
                 <li class="row2"><i class="icons_style fa-solid fa-briefcase"></i>Mi portafolio &nbsp &nbsp</li>
                 <li class="row3"><i class="icons_style fa-solid fa-graduation-cap"></i>Mi aprendizaje 
                    <ul class="menu2">
-                       <li class="menu1"> formatos
+                       <li id="menu-desplegable" class="menu1"> formatos
                            <ul>
                                <li><a class="menu" href="fuenten.html">Netflix</a></li>
                                <li><a class="menu" href="fuented.html">Disney</a></li>
@@ -80,6 +82,13 @@
                         <ul>
                             <li><a class="menu" href="./posicionamiento.html">posicionamientos</a></li>
                         </ul>
+
+                       </li>
+                       <li class="menu1">fondos
+                           <ul>
+                               <li><a href="./backgrond.html" class="manu">background</a></li>
+                           </ul>
+
                        </li>
                    </ul>
                 </li>
@@ -97,6 +106,6 @@
     <div class="caja text2">Come 6 veces al día, muchísima proteína y nunca antes de acostarte, son algunos de los consejos de un culturista</div>
      <div class="caja text3">Construir músculo es una 'ciencia' compleja y depende de muchos factores como la nutrición o el descanso, además del entrenamiento.</div> 
     
-
+        <script src="./js/script.js"></script>
 </body>
 </html>
