--- a/backgrond.html
+++ b/backgrond.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/background.css">
+    <link rel="stylesheet" href="./icons/all.css">
 </head>
 <body>
    <div class="box-main">
        <nav>
            <ul>
-                <li>Inicio</li>
-                <li>Viajes</li>
-                <li>Partners</li>
-                <li class="last-item">Contactenos</li>
+                <li><i class="icons_style fa-solid fa-house-chimney"></i><a href="./index.html">Inicio</a> </li>
+                <li><i class="icons_style fa-solid fa-plane-circle-check"></i>Viajes</li>
+                <li><i class="icons_style fa-solid fa-handshake"></i>Partners</li>
+                <li class="last-item"><i class="icons_style fa-solid fa-square-phone"></i>Contactenos</li>
             </ul>
        </nav>
     
