--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
                  <form  class="formulario_login" > 
                      <h1>   Bienvenido(a)</h1><br>
                       
-                    <label for="">Tipo de documento</label>
+                    <label >Tipo de documento</label>
                     <select name="identidad" id=""> 
                         <option value="">Tarjeta de identidad</option>
                         <option value="">Cedula de ciudadania </option>
