--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                                <li><a class="menu" href="./menu_sena.html"> Menú SENA</a></li>
                                <li><a href="./menu-subitems.html" class="menu">Sub Items</a></li>
                                <li><a class="menu" href="./menu_desplegable.html">Menú Desplegable</a></li>
+                               <li><a href="./menu_responsive.html" class="menu">Menú Responsive</a></li>
                                <li><a class="menu" href="./media-query.html">Menú Hamburguesa</a></li>
                            </ul>
                        </li>
