--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
                            </ul>
 
                        </li>
+                       <li class="menu1">transición
+                            <ul>
+                                <li><a href="./transicion.html" class="menu">transiciones</a></li>
+                            </ul>
+                       </li>
                    </ul>
                 </li>
             </ul>
