--- a/menu_responsive.html
+++ b/menu_responsive.html
@@ -9,22 +9,22 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="menu_bar">
-        <a href="#" class="bt_menu"><span class="icon-menu"></span>Menú Principal</a>
+    <div  class="menu_bar">
+        <a href="#" class="bt_menu"><span class="icon-menu" id="menuclick"></span>Menú Principal</a>
     </div>
-    <nav>
-        <ul>
+    <nav  class="despliege-inactivo" id="desplegable">
+        <ul >
             <li><a href="./index.html">Inicio</a></li>
-            <li><a class="submenu" href="">Productos <span class="icon-cheveron-down"></span> </a>
+            <li><a class="submenu" href="#">Productos <span class="icon-chevron-down"></span></a>
                 <ul class="children">
                     <li><a href="#">Oficina</a></li>
                     <li><a href="#">Hogar</a></li>
                     
                 </ul>
             </li>
-            <li><a href="">Proyectos</a></li>
-            <li><a href="">Nuestra Misión</a></li>
-            <li><a href="">contáctenos</a></li>
+            <li><a href="#">Proyectos</a></li>
+            <li><a href="#">Nuestra Misión</a></li>
+            <li><a href="#">contáctenos</a></li>
         </ul>
     </nav>
     <div class="main-content">
@@ -32,5 +32,6 @@
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus, quas iste vero pariatur quibusdam doloremque officia eius facilis aut velit minima saepe voluptates explicabo debitis vel! Nihil nam esse omnis corrupti ipsa excepturi veniam perferendis, molestias, adipisci vel est voluptatem aliquid fugit cumque at doloribus! Libero quaerat eos ad quod totam quisquam enim magnam reprehenderit, unde consequatur temporibus illo. Eaque commodi sunt minima dolor, soluta laboriosam, iusto vero quis animi nisi distinctio repudiandae excepturi aliquid. Omnis fugiat eum obcaecati culpa officiis, maiores aut quasi, id debitis adipisci et corporis amet, expedita odio accusamus vitae vero nam sit molestias! Laudantium labore eum unde tenetur dolor, deleniti possimus nam error dolores vel.</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio expedita, quibusdam sint quod corporis nulla, minus doloremque incidunt, ratione vitae velit consequuntur quidem. Iste laudantium quia, culpa ratione dolores consequatur ex quas nemo dicta asperiores molestias, ipsa nostrum rerum incidunt cumque minus repudiandae blanditiis earum vel. Dolorem doloremque, corrupti assumenda qui, maxime, explicabo rerum maiores voluptates fuga beatae ad. Fuga similique quas illo ullam id placeat modi fugit ipsa reiciendis quae optio deleniti, animi quia enim! Mollitia, esse illo itaque reiciendis, excepturi ipsam ipsa debitis rerum pariatur perferendis repellendus veniam nam, sit quaerat? Tenetur illo voluptates aut accusamus nostrum laudantium labore veniam recusandae, harum, rerum, reprehenderit id. Pariatur, atque optio?</p>
     </div>
+    <script src="./js/menu-responsive.js"></script>
 </body>
 </html>
