--- a/flex-box.html
+++ b/flex-box.html
@@ -93,11 +93,16 @@
             <div class="box-main-aling">
                 <div class="texto-grafica">Lenguajes en Latinoamerica</div>
                     <div class="box-aling-end">
-                    <div class="box box-box-aling box47">35</div>
-                    <div class="box box-box-aling box48">10</div>
-                    <div class="box box-box-aling box49">5</div>
-                    <div class="box box-box-aling box50">40</div>
-                    <div class="box box-box-aling box51">30</div>
+                    <div class="lineas one"><p class="pal p1">Python </p></div>
+                    <div class="lineas two"><p class="pal p2">Java</p></div>
+                    <div class="lineas three"><p class="pal p3">Javascript</p> </div>
+                    <div class="lineas four"><p class="pal p4">PHP</p></div>
+                    <div class="lineas "><p class="pal p5">Ruby</p></div>
+                    <div class="box box-box-aling box47">35%</div>
+                    <div class="box box-box-aling box48">10%</div>
+                    <div class="box box-box-aling box49">5%</div>
+                    <div class="box box-box-aling box50">40%</div>
+                    <div class="box box-box-aling box51">30%</div>
                 </div> 
             </div>
 
