--- a/index.html
+++ b/index.html
@@ -95,6 +95,17 @@
                                 <li><a href="./transicion.html" class="menu">transiciones</a></li>
                             </ul>
                        </li>
+                       <li class="menu1">flex-box
+                            <ul>
+                                <li><a href="./flex-box.html" class="menu">Flex box</a></li>
+                            </ul>
+                       </li>
+                       <li class="menu1">GRID
+                            <ul>
+                                <li><a href="./html grid.html" class="menu">GRID</a></li>
+                                <li><a href="./calendario.html" class="menu">Calendario</a></li>
+                            </ul>
+                       </li>
                    </ul>
                 </li>
             </ul>
