--- a/calendario.html
+++ b/calendario.html
@@ -13,13 +13,13 @@
 <body>
     <h1 class="mes">Febrero</h1>
     <div class="box-main-day">
-        <div class="day">Domingo</div>
-        <div class="day">Lunes</div>
-        <div class="day">Martes</div>
-        <div class="day">Miercoles</div>
-        <div class="day">Jueves</div>
-        <div class="day">Viernes</div>
-        <div class="day">Sabado</div>
+        <div class="day"><p class="dias">Domingo</p> </div>
+        <div class="day"><p class="dias">Lunes</p> </div>
+        <div class="day"><p class="dias">Martes</p> </div>
+        <div class="day"><p class="dias">Miercoles</p> </div>
+        <div class="day"><p class="dias">Jueves</p> </div>
+        <div class="day"><p class="dias">Viernes</p> </div>
+        <div class="day"><p class="dias">Sabado</p> </div>
     </div>
     <div class="box-main-week">
         <div class="day-week one">1</div>
@@ -35,7 +35,7 @@
         <div class="day-week">11</div>
         <div class="day-week dom">12</div>
         <div class="day-week">13</div>
-        <div class="day-week">14</div>
+        <div class="day-week">14 <p class="festivo">Dia de San Valentin</p></div>
         <div class="day-week">15</div>
         <div class="day-week">16</div>
         <div class="day-week">17</div>
