--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
                             <ul>
                                 <li><a href="./html grid.html" class="menu">GRID</a></li>
                                 <li><a href="./calendario.html" class="menu">Calendario</a></li>
+                                <li><a href="./maquetas.html" class="menu">Maquetacion 1</a></li>
+                                <li><a href="./maquetas2.html" class="menu">Maquetacion 2</a></li>
                             </ul>
                        </li>
                    </ul>
