--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="cuerpo">
             <h2>Bienvenidos </h2>
             <h2>Estos son mis Aprendizajes</h2>
-            <img class="logo" src="./img/gym2.png" alt="">
+            <img class="logo" src="./img/logo.png" alt="">
             <button><a href="aprendizaje.html">Ingresar</a></button>
         </div>
         
