--- a/aprendizaje.html
+++ b/aprendizaje.html
@@ -14,9 +14,9 @@
         <nav>
             <label id="bar-menu" class="bar-menu">&#9776 </label>
             <ul class="nav">
-                <li class="row1"><i class="icons_style fa-solid fa-house-chimney"></i> Home &nbsp &nbsp </li>
-                <li class="row2"><i class="icons_style fa-solid fa-briefcase"></i>Mi portafolio &nbsp &nbsp</li>
-                <li class="row3"><i class="icons_style fa-solid fa-graduation-cap"></i>Mi aprendizaje 
+                <li class="row1"><a href="./index.html"><i class="icons_style fa-solid fa-house-chimney"></i> Home &nbsp &nbsp </a></li>
+                <li class="row2"><a href="#"><i class="icons_style fa-solid fa-briefcase"></i>Mi Perfil &nbsp &nbsp</a></li>
+                <li class="row3"><a href=""><i class="icons_style fa-solid fa-graduation-cap"></i>Mi Aprendizaje</a> 
                    <ul class="menu2">
                        <li id="menu-desplegable" class="menu1"> formatos
                            <ul>
