--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul>
                 <li> <a href="./index.html">Home</a></li>
                 <li> <a href="#">Mi Portafolio</a></li>
-                <li><a href=""> Mi Aprendizaje</a></li>
+                <li><a href="./aprendizaje.html"> Mi Aprendizaje</a></li>
             </ul>
         </nav>
     </div>
