--- a/aprendizaje.html
+++ b/aprendizaje.html
@@ -108,6 +108,11 @@
                                 <li><a href="./maquetas2.html" class="menu">Maquetacion 2</a></li>
                             </ul>
                        </li>
+                       <li class="menu1">carrito de compras
+                            <ul>
+                                <li><a href="./carrito_compras.html" class="menu">carrito de compras</a></li>
+                            </ul>
+                       </li>
                    </ul>
                 </li>
             </ul>
