--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -8,12 +8,31 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <li>collections</li>
-        <li>collections</li>
-        <li>collections</li>
+    <h1>Carrito De Compras</h1>
+    <div class="menu">
+        <nav>
+            <ul>
+                <li><a href="#">collections</a></li>
+                <li><a href="#">Men</a></li>
+                <li><a href="#">Women</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>  
     </div>
-    <div id="imgPrincipal" class="img_principal"></div>
+    <div class="box-main">
+        <div class="img-box-main">
+            <!-- <div id="imgBox" class="img img-box"  > -->
+                <img id="imgBox" class="img img-box" src="./img/image-product-1.jpg" alt="">
+            <!-- </div> -->
+            <div id="boxMini1" class="box-img-1"><img id="imgMini1" class="img-mini" src="./img/img-mini-1.jpg" alt="mini-1"></div>
+            <div id="boxMini2" class="box-img-2"><img id="imgMini2" class="img-mini" src="./img/img-mini-2.jpg" alt="mini-2"></div> 
+            <div id="boxMini3" class="box-img-3"><img id="imgMini3" class="img-mini" src="./img/img-mini-3.jpg" alt="mini-3"></div>
+            <div id="boxMini4" class="box-img-4"><img id="imgMini4" class="img-mini" src="./img/img-mini-4.jpg" alt="mini-4"></div>
+        </div>
+    </div>
+    
+    
     <script src="js/carrito_compras.js"></script>
 </body>
 </html>
