--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/carrito_compras.css">
+    <link rel="stylesheet" href="./icons/all.css">
     <title>Document</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
     <div class="menu">
         <nav>
             <ul>
-                <li><a href="#">collections</a></li>
+                <li><a href="#">Collections</a></li>
                 <li><a href="#">Men</a></li>
                 <li><a href="#">Women</a></li>
                 <li><a href="#">About</a></li>
@@ -30,9 +31,15 @@
             <div id="boxMini3" class="box-img-3"><img id="imgMini3" class="img-mini" src="./img/img-mini-3.jpg" alt="mini-3"></div>
             <div id="boxMini4" class="box-img-4"><img id="imgMini4" class="img-mini" src="./img/img-mini-4.jpg" alt="mini-4"></div>
         </div>
+        <div class="buy-box">
+            <div id="cantBox" class="cant-box">
+                <div id="restaObj" class="icon-po subs-obj"><i class="fa-solid fa-minus"></i></div>
+                <div id="cantidad_obj" class="icon-po cant-obj"><span id="numeroElement"> 1</span></div>
+                <div id="sumaObj" class="icon-po add-obj"><i class="fa-solid fa-plus"></i></div>
+                <p></p>
+            </div>
+        </div>
     </div>
-    
-    
     <script src="js/carrito_compras.js"></script>
 </body>
 </html>
