--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -18,8 +18,12 @@
                 <li><a href="#">Women</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
+                <div class="lado"> 
+                <li class="shopping-car"><a href="#"></a><i class="compra fa-solid fa-cart-plus"></i></li> 
+                </div>  
             </ul>
         </nav>  
+        
     </div>
     <div class="box-main">
         <div class="img-box-main">
@@ -37,6 +41,11 @@
                 <div id="cantidad_obj" class="icon-po cant-obj"><span id="numeroElement"> 1</span></div>
                 <div id="sumaObj" class="icon-po add-obj"><i class="fa-solid fa-plus"></i></div>
                 <p></p>
+
+                <div id="ConfirCompra" class="confir-compra">
+                    
+                    <p class="text-com"><i class="compra fa-solid fa-cart-plus"></i><span class="espacio"></span> agregar al carrito</p>
+                </div>
             </div>
         </div>
     </div>
