--- a/aprendizaje.html
+++ b/aprendizaje.html
@@ -113,6 +113,11 @@
                                 <li><a href="./carrito_compras.html" class="menu">carrito de compras</a></li>
                             </ul>
                        </li>
+                       <li class="menu1"> slider
+                        <ul>
+                            <li><a href="./sliders.html" class="menu">slider</a></li>
+                        </ul>
+                       </li>
                    </ul>
                 </li>
             </ul>
