--- a/sliders.html
+++ b/sliders.html
@@ -15,7 +15,7 @@
         <nav class="main-nav">
             <div class="logo-box">
                 <!-- <img class="img-logo" src="./img/passion_img01(370x300).jpg" alt=""> -->
-                <i class="img-logo fa-sharp fa-regular fa-mountain-sun fa-beat" style="color: #f5f5f5;"></i>
+                <i class="img-logo fa-sharp fa-regular " ></i>
             </div>
             <ul class="main-ul">
                 <li class="style-li"><a class="style-item" href="#">vehiculos</a></li>
@@ -27,9 +27,11 @@
         </nav>
         <div class="box-marco">
             <i id="rightArrow" class="flecha-atras fa-solid fa-chevron-left"></i>
-            <i id="leftArrow"class="flecha-adelante fa-solid fa-chevron-right"></i>
+            <i id="leftArrow" class="flecha-adelante fa-solid fa-chevron-right"></i>
             
-           <!--  <div class="img-principal1"> --><img id="paisaje1" class="paisaje-1" src="./img/paisaje_1_1920x1280 (1).jpg" alt=""><!-- </div> -->
+            <img id="paisaje1" class="paisaje-1" src="./img/paisaje_1_1920x1280 .jpg" alt="">
+            <img id="paisaje2" class="paisaje-2-hidden" src="./img/paisaje_2_1920x1280.jpg" alt="">
+            <img id="paisaje3" class="paisaje-3-hidden" src="./img/pisaje_3_1920x1280.jpg" alt="">
         </div>
     <div class="empty-right"></div>
     <div class="iconos"></div>
