--- a/aprendizaje.html
+++ b/aprendizaje.html
@@ -76,6 +76,7 @@
                         <ul >
                             <li><a class="menu" href="./formulario.html">formulario</a></li>
                             <li><a class="menu" href="./login.html">login</a></li>
+                            <li><a href="./validacion.html" class="menu">validacion usuario</a></li>
                         </ul>
                        </li>
                        <li class="menu1">posicionamientos
