--- a/validacion.html
+++ b/validacion.html
@@ -16,10 +16,10 @@
 </div>
 
     <div class="div-form">
-        <form action="" method="get">
-            <label for="">Ingrese su nombre</label>
+        <div class="form">
+           <h2>Ingrese su nombre</h2>
             <br>
-            <input type="text" name="" id="nombreUsuario" placeholder="Nombre...">
+            <input type="text" name="" id="nombreUsuario" placeholder="Nombre..." required>
             <br>
             <button id="botonEnviar"><a href="#">Enviar</a></button>
         </form>
